# CallTracer

./: Cargo.toml  README.md
src/: banner.rs  cli.rs  duckduckgo.rs  format.rs  googledorking.rs  lookup.rs  main.rs  search.rs
src/bash_scripts/: search.sh  startpage.html
src/scripts/: google_search.sh
